# One-Slot-Victory-Theme

./: Cargo.toml  README.md
.github/workflows/: rust_build.yml
src/: config.rs  lib.rs
