[package]
name = "One_Slot_Victory_Themes"
version = "0.1.0"
authors = ["Ali Hussain (Coolsonickirby) <alihussain2001@gmail.com>"]
edition = "2018"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.4"
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
skyline_smash = { git = "https://github.com/blu-dev/skyline-smash.git", features = ["weak_l2cvalue"] }
smashline = { git = "https://github.com/blu-dev/smashline.git", branch = "development" }
libc-nnsdk = { git = "https://github.com/ultimate-research/libc-nnsdk" }
toml = "0.5.8"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true